--- a/index.html
+++ b/index.html
@@ -7,26 +7,60 @@
 
     <body>
         <div class="header">
-            
+            Header Logo
+            <ul>
+                <li><a href="jpro13.com">header link one</a></li>
+                <li><a href="jpro13.com">header link two</a></li>
+                <li><a href="jpro13.com">header link three</a></li>
+            </ul>
         </div>
         
         <div class="container">
             <div class ="intro">
-
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <button>Sign up</button>
+                <img>
             </div>
             <div class="info">
+                Some random information
+
+                <div class="info-box">
+                    <img>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+
+                <div class="info-box">
+                    <img>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+
+                <div class="info-box">
+                    <img>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+
+                <div class="info-box">
+                    <img>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
 
             </div>
             <div class="quote">
-
+                <div class="quote-text"> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+                <div class="quote-author">Thor, God of Thunder</div>
             </div>
             <div class="call-to-action">
-
+                <div class="cta-leftside">
+                    <div class="cta-title">Call to action! It's time!</div>
+                    <div class="text">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button>Sign up</button>
             </div>
         </div>
 
         <div class="footer">
-
+            Copyright © The Odin Project 2021
         </div>
 
     </body>
