--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css">
         <title>Odin Landing Page</title>
     </head>
 
@@ -51,11 +52,13 @@
                 <div class="quote-author">Thor, God of Thunder</div>
             </div>
             <div class="call-to-action">
-                <div class="cta-leftside">
-                    <div class="cta-title">Call to action! It's time!</div>
-                    <div class="text">Sign up for our product by clicking that button right over there!</div>
+                <div class="cta-container">
+                    <div class="cta-leftside">
+                        <div class="cta-title">Call to action! It's time!</div>
+                        <div class="text">Sign up for our product by clicking that button right over there!</div>
+                    </div>
+                    <button>Sign up</button>
                 </div>
-                <button>Sign up</button>
             </div>
         </div>
 
