Add css to intro class

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
                     <button>Sign up</button>
                 </div>
-                <img>
+                <img src="./images/building.jpg" alt="Circular Building Levels">
             </div>
             <div class="info">
                 Some random information
