Add css to info class

--- a/index.html
+++ b/index.html
@@ -26,29 +26,31 @@
                 <img src="./images/building.jpg" alt="Circular Building Levels">
             </div>
             <div class="info">
-                Some random information
+                <div class="title">Some random information</div>
 
-                <div class="info-box">
-                    <img>
-                    <div class="text">this is some subtext under an illustration or image</div>
+                <div class="info-box-container">
+                    <div class="info-box">
+                        <img src="./images/building.jpg" alt="Circular Building Levels">
+                        <div class="text">this is some subtext under an illustration or image</div>
+                    </div>
+
+                    <div class="info-box">
+                        <img src="./images/building.jpg" alt="Circular Building Levels">
+                        <div class="text">this is some subtext under an illustration or image</div>
+                    </div>
+
+                    <div class="info-box">
+                        <img src="./images/water.jpg" alt="dark blue sea water">
+                        <div class="text">this is some subtext under an illustration or image</div>
+                    </div>
+
+                    <div class="info-box">
+                        <img src="./images/water.jpg" alt="dark blue sea water">
+                        <div class="text">this is some subtext under an illustration or image</div>
+                    </div>
                 </div>
-
-                <div class="info-box">
-                    <img>
-                    <div class="text">this is some subtext under an illustration or image</div>
-                </div>
-
-                <div class="info-box">
-                    <img>
-                    <div class="text">this is some subtext under an illustration or image</div>
-                </div>
-
-                <div class="info-box">
-                    <img>
-                    <div class="text">this is some subtext under an illustration or image</div>
-                </div>
-
             </div>
+
             <div class="quote">
                 <div class="quote-text"> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
                 <div class="quote-author">Thor, God of Thunder</div>
